<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff00">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:context="com.example.android.courtcounter.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/PlayerA"
                android:textColor="#4CAF50"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/playerA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Score"
                android:textColor="#000000"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <TextView

                    style="@style/CustomSet"
                    android:text="@string/set1" />

                <TextView

                    style="@style/CustomSet"
                    android:text="@string/set2" />

                <TextView

                    style="@style/CustomSet"
                    android:text="@string/set3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp">

                <TextView

                    style="@style/CustomSetScoreView"
                    android:id="@+id/set1"

                     />

                <TextView

                    style="@style/CustomSetScoreView"
                    android:id="@+id/set2"
                    />


                <TextView

                    style="@style/CustomSetScoreView"
                    android:id="@+id/set3"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <Button

                    style="@style/CustomButton"
                    android:onClick="set1"
                     />

                <Button

                    style="@style/CustomButton"
                    android:onClick="set2"
                    />

                <Button

                    style="@style/CustomButton"
                    android:onClick="set3"
                     />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:onClick="playerA"
                    android:text="@string/PlayerAPlus" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/PlayerB"
                android:textColor="#4CAF50"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/playerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Score"
                android:textColor="#000000"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <TextView

                    style="@style/CustomSet"
                    android:text="@string/set1" />

                <TextView

                    style="@style/CustomSet"
                    android:text="@string/set2" />

                <TextView

                    style="@style/CustomSet"
                    android:text="@string/set3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp">

                <TextView

                    style="@style/CustomSetScoreView"
                    android:id="@+id/set1b"
                    />

                <TextView

                    style="@style/CustomSetScoreView"
                    android:id="@+id/set2b"
                     />

                <TextView

                    style="@style/CustomSetScoreView"
                    android:id="@+id/set3b"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <Button

                    style="@style/CustomButton"
                    android:onClick="set1b"
                     />

                <Button

                    style="@style/CustomButton"
                    android:onClick="set2b"
                     />

                <Button

                    style="@style/CustomButton"
                    android:onClick="set3b"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:onClick="playerB"
                    android:text="@string/PlayerBPlus" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/RESET" />


</RelativeLayout>

</ScrollView>

